--- a/Menu.html
+++ b/Menu.html
@@ -53,7 +53,7 @@
         <nav class="navegador_principal">
             <a href="/index.html" class="botonInicio">Inicio</a>
             <a href="#" class="botonTienda">Tienda</a>
-            <a href="#" class="botonInformacion">Informacion</a>
+            <a href="/informacion.html" class="botonInformacion">Informacion</a>
         </nav>
         <nav class="navegador_tienda">
             <a href="#todo">Todo</a>
