--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/estilo_inicio.css">
+        <link rel="icon" href="/img/images/CH icono.ico">
     </head>
     <body>
         <header>
