--- a/informacion.html
+++ b/informacion.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Información</title>
     <link rel="stylesheet" href="./css/info.css">
+    <link rel="icon" href="/img/images/CH icono.ico">
     <script src="https://kit.fontawesome.com/e0a3a9c21a.js" crossorigin="anonymous"></script>
 </head>
 <body>
