--- a/Menu.html
+++ b/Menu.html
@@ -30,7 +30,7 @@
                 </a>
                 <!-- carrito -->
                 <div class="carritoCompra">
-                  <h2 class="carrito-titulo">Tus compras</h2>
+                  <h2 class="carrito-titulo">Tu carrito</h2>
                   <div class="carrito-contenido">
                      
                   </div>
@@ -40,7 +40,7 @@
                      <div class="precio-total">$0</div>
                   </div>
                   <!-- Boton de comprar -->
-                  <button type="button" class="btn-comprar">Realizar Compra</button>
+                  <button type="button" class="btn-comprar">Guardar en pedido</button>
                   <!-- Cerrar Carrito -->
                   <i class="fa-solid fa-circle-xmark" id="cerrar-carrito"></i>
                 </div>
@@ -54,6 +54,7 @@
             <a href="/index.html" class="botonInicio">Inicio</a>
             <a href="#" class="botonTienda">Tienda</a>
             <a href="/informacion.html" class="botonInformacion">Informacion</a>
+            <a href="#" class="botonPedidos">Pedidos</a>
         </nav>
         <nav class="navegador_tienda">
             <a href="#todo">Todo</a>
