--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <h1 style="font-family: 'Pacifico', cursive">Cake House</h1>
                 </div>
                 <div class="logIn">
-                    <a href="#" class="linkLogIn">
+                    <a href="./Login.html" class="linkLogIn">
                         <i class="fa-solid fa-user"></i>
                         <p>Log In</p>
                     </a>
