hice cosas corriegiendo el log in

--- a/Login.html
+++ b/Login.html
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+    <div class="caja gradiante">
     <form class="formulario">
         <h1>Login</h1>
         <div class="contenedor">
@@ -25,6 +26,8 @@
             <p>¿Ya tienes cuenta?<a class="link" href="registro.html"> Registrate</a></p>
         </div>
     </form>  
+    </div>
+    
     <script src="./JS/login.js"></script>
 </body>
 </html>
