--- a/registro.html
+++ b/registro.html
@@ -11,6 +11,8 @@
 
 </head>
 <body>
+    <div class="caja gradiante">
+
     <form class="formulario">
         <h1>Registrate</h1>
         <div class="contenedor">
@@ -30,6 +32,7 @@
             <p>Al registrarte, aceptas nuestras condiciones de Uso y la Política de privacidad</p>
             <p>¿Ya tienes cuenta?<a class="link" href="Login.html"> Iniciar Sesión</a></p>
         </div>
-    </form>  
+    </form> 
+    </div>  
 </body>
 </html>
