--- a/Login.html
+++ b/Login.html
@@ -22,7 +22,8 @@
                 <i class="fa-solid fa-lock icon"></i>
                 <input type="password" placeholder="Contraseña">
             </div><br>
-            <input type="submit" value="Ingresar" class="button" onclick="login()">
+            <!-- <input type="submit" value="Ingresar" class="button" onclick="login()"> -->
+            <a  class='button' href="/index.html">Ingresa</a>
             <p>¿Ya tienes cuenta?<a class="link" href="registro.html"> Registrate</a></p>
         </div>
     </form>  
