nuevos cambios agregados

--- a/index.html
+++ b/index.html
@@ -49,14 +49,12 @@
                 </div>
             </div>
         </header>
-      <nav>
-        <!-- Menu -->
-        <div class="menu">
-            <a href="./informacion.html" class="menuOpciones">Inicio</a>
-            <a href="./Menu.html" class="menuOpciones">Tienda</a>
-            <a href="./informacion.html" class="menuOpciones">Informacion</a>
-        </div>
-      </nav>
+        <nav class="navegador_principal">
+            <a href="/index.html" class="botonInicio">Inicio</a>
+            <a href="#" class="botonTienda">Tienda</a>
+            <a href="/informacion.html" class="botonInformacion">Informacion</a>
+            <a href="#" class="botonPedidos">Pedidos</a>
+        </nav>
     
       <section>
         <h2> Disfruta todos nuestro postres </h2>
